# Leo-Rover-Project

./: README.md
basic_ros2_extra_files/plant_detector/: alien_plant_detector_ros2_node.py  plant_detector.cpp  plant_detector_ros2_node.py
basics_ros2_multithreading/: CMakeLists.txt  package.xml
basics_ros2_multithreading/launch/: callback_function.launch.py  green_detector_node.launch.py  plant_detector.launch.py  plant_detector_multithreading.launch.py  plant_detector_multithreading_callbackgroups.launch.py  plant_detector_multithreading_callbackgroups_mutually.launch.py
basics_ros2_multithreading/scripts/: callback_function.py  callback_spinonce_function.py  function.py  green_detector_node.py  green_test.py  plant_detector.py  plant_detector_multithreading.py  plant_detector_multithreading_callbackgroups.py  plant_detector_multithreading_callbackgroups_mutually.py
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/msg/: RoverEvents.msg
custom_interfaces/srv/: TextRecognitionSrv.srv
leo_description/: CMakeLists.txt  package.xml
leo_description/launch/: loc_nav.launch.py
leo_description/map/: map_leo_last.yaml
leo_description/urdf/: leo_sim.urdf.xacro  macros.xacro  sensors.xacro  sensors_actions.xacro
leo_gz_bringup/: CMakeLists.txt
leo_gz_bringup/launch/: leo_gz.launch.py  spawn_robot.launch.py
leo_gz_worlds/models/crate_waste/meshes/: crate.dae
leo_gz_worlds/worlds/: space_terrain_env.world  space_terrain_env_missions.world  space_terrain_env_simple.world  space_terrain_flat_env.world
leo_rover_systems/: package.xml  setup.cfg  setup.py
leo_rover_systems/launch/: start_leo_rover_systems.launch.py  two_rover_heartbeat.launch.py
leo_rover_systems/leo_rover_systems/: heartbeat.py  temperature_monitor.py
leo_rover_tasks/: package.xml  setup.cfg  setup.py
leo_rover_tasks/leo_rover_tasks/: autonomous_exploration.py  leo_rover_status_s_client.py  leo_rover_status_s_server.py  plant_detector_node.py  publish_leo_rover_move.py  subscriber_obstacle_detector.py  text_recog_node.py  text_recog_s_client.py  text_recog_s_client_custom.py  text_recog_s_server.py  text_recog_s_server_custom.py
my_action_client/: package.xml  setup.py
my_action_client/launch/: example72_launch_file.launch.py  example75_launch_file.launch.py
my_action_client/my_action_client/: action_client.py  custom_action_client.py
my_action_server/: package.xml  setup.py
my_action_server/my_action_server/: action_server.py
ros2_callback_visualiser/: CMakeLists.txt
ros2_callback_visualiser/scripts/: analise_trace_plant_searcher_callbacks.py
ros2_tracer_examples/: ros2_tracing_analysis.html
services_custom_pkg/: CMakeLists.txt  package.xml
services_custom_pkg/srv/: Turn.srv
services_turn/: package.xml  setup.cfg  setup.py
services_turn/launch/: services_quiz_client.launch.py  services_quiz_server.launch.py
services_turn/services_turn/: turn_s_client.py  turn_s_server.py
specific_location/: package.xml  setup.cfg  setup.py
specific_location/launch/: specific_location.launch.py
specific_location/specific_location/: specific_location.py
